hoping windows horizontal scroll is fixed

--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,8 @@ body {
     /* border: 1px solid red; */
 
     overflow: hidden;
+
+    width: 100%;
 }
 
 .projects-section-header {
@@ -359,6 +361,8 @@ body {
     /* border: 1px solid red; */
 
     width: 100vw;
+
+    width: 100%;
     /* height: 100vw; */
 
     box-sizing: border-box;
